WIP. no resize.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -259,6 +259,12 @@ if(FLTK_BUILD_SHARED_LIBS AND GENERATE_EXPORT_HEADERS)
       STATIC_DEFINE FL_STATIC_LIB
     )
 
+    generate_export_header(fltk_vk_SHARED
+      BASE_NAME fl_vk
+      EXPORT_FILE_NAME FL/fltk_vk_export.h
+      STATIC_DEFINE FL_STATIC_LIB
+    )
+
   endif(NOT MSVC)
 
 endif(FLTK_BUILD_SHARED_LIBS AND GENERATE_EXPORT_HEADERS)
