--- a/fltk-config.in
+++ b/fltk-config.in
@@ -69,6 +69,7 @@ STATICIMAGELIBS="@STATICIMAGELIBS@"
 SHAREDSUFFIX="@SHAREDSUFFIX@"
 CAIROLIBS="@CAIROLIBS@"
 GLLIBS="@GLLIBS@"
+VKLIBS="@VKLIBS@"x
 
 # Check bundled image libraries in source tree
 if test -f "$libdir/libfltk_jpeg.a" -a -d $includedir/jpeg; then
@@ -108,6 +109,7 @@ Options:
 
 Options telling what we are doing:
     [--use-gl]        use GL
+    [--use-vk]        use Vulkan
     [--use-images]    use extra image formats (PNG, JPEG)
     [--use-glut]      use glut compatibility layer
     [--use-forms]     use forms compatibility layer
@@ -172,6 +174,9 @@ do
             ;;
         --use-gl | --use-glut)
             use_gl=yes
+            ;;
+        --use-vk)
+            use_vk=yes
             ;;
         --use-forms)
             use_forms=yes
@@ -282,6 +287,11 @@ fi
 if test x$use_gl = xyes; then
     LDLIBS="-lfltk_gl$SHAREDSUFFIX $GLLIBS $LDLIBS"
     LDSTATIC="$libdir/libfltk_gl.a $GLLIBS $LDSTATIC"
+fi
+
+if test x$use_vk = xyes; then
+    LDLIBS="-lfltk_vk$SHAREDSUFFIX $VKLIBS $LDLIBS"
+    LDSTATIC="$libdir/libfltk_vk.a $VKLIBS $LDSTATIC"
 fi
 
 if test x$use_images = xyes; then
@@ -419,6 +429,10 @@ if test "$echo_libs" = "yes"; then
 
     if test x$use_gl = xyes; then
         USELIBS="$libdir/libfltk_gl.a $USELIBS"
+    fi
+    
+    if test x$use_vk = xyes; then
+        USELIBS="$libdir/libfltk_vk.a $USELIBS"
     fi
 
     if test x$use_images = xyes; then
