--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -931,7 +931,7 @@ endif(FLTK_USE_GL)
 
 if(FLTK_USE_VK)
   fl_add_library(fltk_vk STATIC "${VKCPPFILES};${VK_HEADER_FILES};${VK_DRIVER_HEADER_FILES}")
-  target_link_libraries(fltk_vk PUBLIC ${Vulkan_LIBRARIES} fltk::fltk)
+  target_link_libraries(fltk_vk PUBLIC ${Vulkan_LIBRARIES} fltk::fltk ${CMAKE_DL_LIBS})
   target_include_directories(fltk_vk PUBLIC ${Vulkan_INCLUDE_DIR} ${VULKAN_INCLUDE_DIRS})
 
   # Add "optional libs" (FIXME: this can be optimized, we don't need *all* these libs here)
@@ -1001,7 +1001,7 @@ if(FLTK_BUILD_SHARED_LIBS AND NOT MSVC)
 
   if(FLTK_USE_VK)
     fl_add_library(fltk_vk SHARED "${VKCPPFILES};${VK_HEADER_FILES};${VK_DRIVER_HEADER_FILES}")
-    target_link_libraries(fltk_vk-shared PUBLIC ${Vulkan_LIBRARIES} fltk::fltk-shared)
+    target_link_libraries(fltk_vk-shared PUBLIC ${Vulkan_LIBRARIES} fltk::fltk-shared ${CMAKE_DL_LIBS})
     target_include_directories(fltk_vk-shared PUBLIC ${Vulkan_INCLUDE_DIR} ${VULKAN_INCLUDE_DIRS})
 
     # Add "optional libs" (FIXME: this can be optimized, we don't need *all* these libs here)
