--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -334,6 +334,7 @@ if(FLTK_BUILD_SHARED_LIBS)
 
     if(VULKAN_FOUND)
 	fl_create_example(vk_shape-shared vk_shape.cxx "${VKDEMO_SHARED}")
+	fl_create_example(vk_shape_shaders-shared vk_shape_shaders.cxx "${VKDEMO_SHARED}")
     endif(VULKAN_FOUND)
 
   endif(MSVC) # (not MSVC)
@@ -355,6 +356,7 @@ else() # not FLTK_BUILD_SHARED_LIBS
     # Vulkan demos. These programs can't be built w/o Vulkan
     if(VULKAN_FOUND)
 	fl_create_example(vk_shape vk_shape.cxx "${VKDEMO_LIBS}")
+	fl_create_example(vk_shape_shaders vk_shape_shaders.cxx "${VKDEMO_LIBS}")
     endif(VULKAN_FOUND)
 
 endif(FLTK_BUILD_SHARED_LIBS)
