Fixed windows build.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -79,9 +79,9 @@ endif()
 if(VULKAN_FOUND)
   set(VKDEMO_LIBS fltk::vk)
   if(MSVC)
-    set(VKDEMO_SHARED fltk::fltk-shared)
+    set(VKDEMO_SHARED fltk::fltk-shared Vulkan::shaderc_conbined)
   else()
-    set(VKDEMO_SHARED fltk::vk-shared)
+    set(VKDEMO_SHARED fltk::vk-shared Vulkan::shaderc_combined)
   endif()
 else()
   set(VKDEMO_LIBS fltk::fltk)
