Added export symbols.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1039,6 +1039,7 @@ if(FLTK_BUILD_SHARED_LIBS AND MSVC)
     list(APPEND SOURCES ${VKCPPFILES} ${VK_HEADER_FILES} ${VK_DRIVER_HEADER_FILES})
   endif(VULKAN_FOUND)
 
+  message(STATUS "VKCPPFILES=${VKCPPFILES}")
   message(STATUS "VULKANLIBS=${VULKANLIBS}")
   message(STATUS "Vulkan_LIBRARIES=${Vulkan_LIBRARIES}")
   message(STATUS "VULKAN_LIBRARIES=${VULKAN_LIBRARIES}")
