--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -79,7 +79,7 @@ endif()
 if(VULKAN_FOUND)
   set(VKDEMO_LIBS fltk::vk)
   if(MSVC)
-    set(VKDEMO_SHARED fltk::fltk-shared Vulkan::shaderc_conbined)
+    set(VKDEMO_SHARED fltk::fltk-shared)
   else()
     set(VKDEMO_SHARED fltk::vk-shared Vulkan::shaderc_combined)
   endif()
@@ -316,9 +316,9 @@ if(FLTK_BUILD_SHARED_LIBS)
     endif(OPENGL_FOUND)
 
     if(VULKAN_FOUND)
-	fl_create_example(vk_shape-shared vk_shape.cxx "${VKDEMO_SHARED}")
-	fl_create_example(vk_shape_textured-shared vk_shape_textured.cxx "${VKDEMO_SHARED}")
-	fl_create_example(vk_cube-shared vk_cube.cxx "${VKDEMO_SHARED}")
+	fl_create_example(vk_shape-shared vk_shape.cxx "CALL_MAIN;${VKDEMO_SHARED}")
+	fl_create_example(vk_shape_textured-shared vk_shape_textured.cxx "CALL_MAIN;${VKDEMO_SHARED}")
+	fl_create_example(vk_cube-shared vk_cube.cxx "CALL_MAIN;${VKDEMO_SHARED}")
     endif(VULKAN_FOUND)
     
     # apply property COMPILE_DEFINITIONS "-D FL_DLL" in a loop for all necessary source files
