Code clean up and refactor.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -319,7 +319,7 @@ if(FLTK_BUILD_SHARED_LIBS)
 	fl_create_example(vk_shape-shared vk_shape.cxx "CALL_MAIN;${VKDEMO_SHARED}")
 	fl_create_example(vk_shape_textured-shared vk_shape_textured.cxx "CALL_MAIN;${VKDEMO_SHARED}")
 	fl_create_example(vk_shape_hdr-shared vk_shape_hdr.cxx "CALL_MAIN;${VKDEMO_SHARED}")
-	fl_create_example(vk_cube-shared vk_cube.cxx "CALL_MAIN;${VKDEMO_SHARED}")
+	#fl_create_example(vk_cube-shared vk_cube.cxx "CALL_MAIN;${VKDEMO_SHARED}")
     endif(VULKAN_FOUND)
     
     # apply property COMPILE_DEFINITIONS "-D FL_DLL" in a loop for all necessary source files
@@ -341,9 +341,9 @@ if(FLTK_BUILD_SHARED_LIBS)
 
     if(VULKAN_FOUND)
 	fl_create_example(vk_shape-shared vk_shape.cxx "${VKDEMO_SHARED}")
-	fl_create_example(vk_shape_hdr-shared vk_shape_hdr.cxx "${VKDEMO_SHARED}")
 	fl_create_example(vk_shape_textured-shared vk_shape_textured.cxx "${VKDEMO_SHARED}")
-	fl_create_example(vk_cube-shared vk_cube.cxx "${VKDEMO_SHARED}")
+	fl_create_example(vk_shape_hdr-shared vk_shape_hdr.cxx "${VKDEMO_SHARED}")
+	#fl_create_example(vk_cube-shared vk_cube.cxx "${VKDEMO_SHARED}")
     endif(VULKAN_FOUND)
 
   endif(MSVC) # (not MSVC)
