--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -320,6 +320,8 @@ if(FLTK_BUILD_SHARED_LIBS)
     if(VULKAN_FOUND)
 	fl_create_example(vk_shape-shared vk_shape.cxx "CALL_MAIN;${VKDEMO_SHARED}")
 	fl_create_example(vk_shape_textured-shared vk_shape_textured.cxx "CALL_MAIN;${VKDEMO_SHARED}")
+	fl_create_example(vk_shape_hdr-shared vk_shape_hdr.cxx "CALL_MAIN;${VKDEMO_SHARED}")
+
 	if (HAS_GLM)
 	    fl_create_example(vk_cube-shared vk_cube.cxx "CALL_MAIN;${VKDEMO_SHARED}")
 	endif()
@@ -345,6 +347,7 @@ if(FLTK_BUILD_SHARED_LIBS)
     if(VULKAN_FOUND)
 	fl_create_example(vk_shape-shared vk_shape.cxx "${VKDEMO_SHARED}")
 	fl_create_example(vk_shape_textured-shared vk_shape_textured.cxx "${VKDEMO_SHARED}")
+	fl_create_example(vk_shape_hdr-shared vk_shape_hdr.cxx "${VKDEMO_SHARED}")
 	if (HAS_GLM)
 	    fl_create_example(vk_cube-shared vk_cube.cxx "${VKDEMO_SHARED}")
 	endif()
@@ -370,6 +373,7 @@ else() # not FLTK_BUILD_SHARED_LIBS
     if(VULKAN_FOUND)
 	fl_create_example(vk_shape vk_shape.cxx "${VKDEMO_LIBS}")
 	fl_create_example(vk_shape_textured vk_shape_textured.cxx "${VKDEMO_LIBS}")
+	fl_create_example(vk_shape_hdr-shared vk_shape_hdr.cxx "${VKDEMO_SHARED}")
 	if (HAS_GLM)
 	    fl_create_example(vk_cube vk_cube.cxx "${VKDEMO_LIBS}")
 	endif()
